--- a/now/accounts/templates/accounts/test.html
+++ b/now/accounts/templates/accounts/test.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-  <h1>You are now logged in!</h1>
-
-
+  <h1>whp!</h1>
 
 </div>
 
