--- a/now/profileacc/templates/profileacc/dashboard.html
+++ b/now/profileacc/templates/profileacc/dashboard.html
@@ -38,7 +38,7 @@
 
         <div class="row">
           <div class="col-md-12" style="margin-top: 2%; margin-left: 8%">
-            <button class="btn btn-default"> Edit Profile </button>
+            <button class="btn btn-default"><a href="#"> Edit Profile </button>
           </div>
         </div>
 
