--- a/now/accounts/templates/accounts/detail-update-view.html
+++ b/now/accounts/templates/accounts/detail-update-view.html
@@ -11,9 +11,8 @@
   {{ form.as_p }}
   <label for='email'>Email</label>
   <input type='text' id='email' class='form-control disabled' value='{{ request.user.email }}' disabled="disabled" /><span class='help-text'>Cannot change email</span><br/>
-
   <button type='submit' class='btn btn-default my-3'>Save</button>
-  <a href='#'>Change Password</a>
+  <a href='{% url "password_change" %}'>Change Password</a>
 </form>
 </div>
 {% endblock %}
