--- a/now/patient/templates/patient/detail-update-view.html
+++ b/now/patient/templates/patient/detail-update-view.html
@@ -9,11 +9,12 @@
     <input type='hidden' name='next' value='{{ next_url }}' />
     {% endif %}
   {{ form.as_p }}
+  <label for='email'>Full Name:</label>
+  <input type='text' id='email' class='form-control disabled' value='{{ request.user.patientprofile.pat_name }}' disabled="disabled" /><span class='help-text'>Cannot change email</span><br/>
   <label for='email'>Email</label>
-  <input type='text' id='email' class='form-control disabled' value='{{ request.user.email }}' disabled="disabled" /><span class='help-text'>Cannot change email</span><br/>
+  <input type='text' id='email' class='form-control disabled' value='{{ request.user.patientprofile.pat_email }}' disabled="disabled" /><span class='help-text'>Cannot change email</span><br/>
 
   <button type='submit' class='btn btn-default my-3'>Save</button>
-  <a href='#'>Change Password</a>
 </form>
 </div>
 {% endblock %}
