--- a/now/profileacc/templates/profileacc/register2.html
+++ b/now/profileacc/templates/profileacc/register2.html
@@ -4,11 +4,11 @@
 <div class="row">
   <div class="col-md-8">
    <div class="jumbotron" style="background-color: #A9E2F3; margin-left: 20%; margin-top: 8%; margin-bottom: 30%;  width: 100%">
-    <h1>SignUp!</h1>
+    <h1>Complete your profile</h1>
     <form method="POST">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <input type="submit" value="Register!" class="btn btn-default">
+        <input type="submit" value="Update Profile" class="btn btn-default">
         <button type="reset" value="Reset">Reset</button>
     </form>
 </div>
